enable priview feature and fix test
Signed-off-by: debasishbsws <debasishbsws.abc@gmail.com>