@@ -30,6 +30,7 @@
 
   <properties>
     <java.version>20</java.version>
+    <argLine>--enable-preview</argLine>
   </properties>
 
 
